<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewmodelobject"
            type="com.example.bookapplication.ui.mainactivity.ui.activityregistration.RegistrationViewModel"/>
    </data>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/titleApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:textAlignment="center"
            android:textSize="19sp" />

        <LinearLayout
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/accountuser"
                android:contentDescription="@string/emailicon" />

            <android.support.design.widget.TextInputLayout
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textSize="20sp"
                    />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/passwordicon"
                android:contentDescription="@string/passwordicon" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginRight="10dp"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textSize="20sp"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/passwordicon"
                android:contentDescription="@string/passwordicon" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginRight="10dp"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:textSize="20sp"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <CheckBox
            android:layout_marginLeft="50dp"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_agree_with_the_terms_and_condition_and_the_privacy_policy"
            android:layout_marginStart="10dp" />

        <android.support.v7.widget.CardView
            android:layout_marginTop="80dp"
            android:layout_marginBottom="60dp"
            android:layout_width="250dp"
            app:cardBackgroundColor="#44A6FF"
            app:cardCornerRadius="30dp"
            android:layout_height="50dp"
            app:cardElevation="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_up"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:fontFamily="@font/simplefont" />
        </android.support.v7.widget.CardView>
    </LinearLayout>


</RelativeLayout>
</layout>